--- a/Content/Content.html
+++ b/Content/Content.html
@@ -14,14 +14,69 @@
 
 <div class="grid-container">
   <div class="item1"><img src="img/ContentPic.jpg" alt="MenuPic"></div>
-  <div class="item3"><h3>ด้านโครงสร้างและเนื้อหา</h3><br> 
-  	<ul><li><a href="Content1/Content1.html">1.1 HTML1</a></li> <li><a href="Content2/Tryit.html">1.2 HTML2</a></li> <li><a href="Content3/Tryit.html">1.3 HTML3</a></li> </ul><br>
-  	<h3>ด้านการตกแต่ง</h3><br> 
-  	<ul><li><a href="Content4/Content4.html">2.1 CSS 1</a></li> <li><a href="Content5/Tryit.html">2.2 CSS 2</a></li> <li><a href="Content6/Content6.html">2.3 FORM</a></li> </ul><br>
+  <div class="item3">
+    <div class="conbtn">
+    <h2>ด้านโครงสร้างและเนื้อหา</h2><br> 
+    <div class="dropdown">
+    <button class="dropbtn">1.1 HTML 1</button>
+      <div class="dropdown-content">
+        <a href="Content1/Content1.html">เนื้อหา HTML เบื้องต้น</a>
+        <a href="Content1/Tryit_1/Tryit.html">เนื้อหา ส่วนประกอบ HTML, Heading และ Paragraphs</a>
+        <a href="Content1/Tryit_1/Tryit_1/Tryit_1/Tryit_1/Tryit_1/Tryit.html">เนื้อหา Formatting และ Blockquote</a>
+      </div>
+    </div>
+
+    <div class="dropdown">
+    <button class="dropbtn">1.2 HTML 2</button>
+      <div class="dropdown-content">
+        <a href="Content2/Tryit.html">เนื้อหา การลิงก์เว็บไซต์, รูปภาพ, ตาราง และ รายการบนเว็บ</a>
+        <a href="Content2/Tryit_1/Tryit_1/Tryit_1/Tryit_1/Tryit.html">เนื้อหา Div และ Class</a>
+      </div>
+    </div>
+
+    <div class="dropdown">
+    <button class="dropbtn">1.3 HTML 3</button>
+      <div class="dropdown-content">
+        <a href="Content3/Tryit.html">HTML Layout</a>
+        <a href="Content3/Tryit_5/Tryit.html">เนื้อหา การลิงก์ CSS และการเรียกใช้ JavaScript</a>
+        <a href="#">แบบทดสอบ HTML</a>
+      </div>
+    </div>
+    </div><br>
+
+    <div class="conbtn">
+    <h2>ด้านการตกแต่ง</h2><br> 
+    <div class="dropdown">
+    <button class="dropbtn">2.1 CSS 1</button>
+      <div class="dropdown-content">
+        <a href="Content4/Content4.html">CSS</a>
+        <a href="Content4/Tryit_1/Tryit_1/Tryit_1/Tryit_1/Tryit.html">เนื้อหา CSS BOX MODEL และการตกแต่งเว็บ</a>
+      </div>
+    </div>
+
+    <div class="dropdown">
+    <button class="dropbtn">2.2 CSS 2</button>
+      <div class="dropdown-content">
+        <a href="Content5/Tryit_5/Tryit.html">ปรับแต่งเว็บด้วย CSS (1)</a>
+        <a href="Content5/Tryit_5/Tryit_5/Tryit.html">ปรับแต่งเว็บด้วย CSS (2)</a>
+        <a href="#">แบบทดสอบ CSS</a>
+      </div>
+    </div>
+
+    <div class="dropdown">
+    <button class="dropbtn">2.3 FORM</button>
+      <div class="dropdown-content">
+        <a href="Content6/Content6.html">FORM</a>
+        <a href="Content6/Tryit1/Tryit.html"> Element ต่างๆ ใน Form </a>
+        <a href="Content6/Tryit1/Tryit2/Tryit.html">การสร้าง Text input fields</a>
+      </div>
+    </div>
+    </div>
+    
+
   </div>
   <div class="item4"></div>
 </div>
-
 
 </body>
 </html>
