--- a/Content/Content6/Tryit1/Tryit.html
+++ b/Content/Content6/Tryit1/Tryit.html
@@ -39,7 +39,7 @@
 
 
 <div class="grid-container">
-	<div class="item1"><center><b>1. label Element ต่างๆใน Form </b></center></div>
+	<div class="item1"><center><b>1. Element ต่างๆ ใน Form </b></center></div>
 	<div class="item3"> 
 		<div class="code-editor custom-box">
 		<center><b>ลองแก้ไขโค้ดดูสิ!</b></center>
