--- a/Content/Content.html
+++ b/Content/Content.html
@@ -39,7 +39,7 @@
       <div class="dropdown-content">
         <a href="Content3/Tryit.html">HTML Layout</a>
         <a href="Content3/Tryit_5/Tryit.html">เนื้อหา การลิงก์ CSS และการเรียกใช้ JavaScript</a>
-        <a href="#">แบบทดสอบ HTML</a>
+        <a href="Content3/Tryit_5/Tryit_4/Tryit_4/Quiz/Quiz.html">แบบทดสอบ HTML</a>
       </div>
     </div>
     </div><br>
@@ -59,7 +59,7 @@
       <div class="dropdown-content">
         <a href="Content5/Tryit_5/Tryit.html">ปรับแต่งเว็บด้วย CSS (1)</a>
         <a href="Content5/Tryit_5/Tryit_5/Tryit.html">ปรับแต่งเว็บด้วย CSS (2)</a>
-        <a href="#">แบบทดสอบ CSS</a>
+        <a href="Content5/Tryit_5/Tryit_5/Quiz/Quiz.html">แบบทดสอบ CSS</a>
       </div>
     </div>
 
