--- a/Content/Content5/Tryit_5/Tryit_5/Quiz/Quiz.html
+++ b/Content/Content5/Tryit_5/Tryit_5/Quiz/Quiz.html
@@ -8,22 +8,18 @@
 </head>
 <body>
 <ul>
-  <li><a class="active" href="../../../index.html">Home</a></li>
-  <li><a href="../../Content.html">เนื้อหา</a></li>
+  <li><a class="active" href="../../../../../index.html">Home</a></li>
+  <li><a href="../../../../QuizHome/index.html">ทดสอบ</a></li>
 </ul>
 
 <div class="grid-container">
-	<div class="item1">แบบทดสอบ</div>
+	<div class="item1">แบบทดสอบ CSS</div>
 	<div class="item3"> 
 		<img src="img/Quiz1.jpg" width="100" height="200">
 	</div>
 	<div class="item4">
 		<div class="quiz-home-box custom-box show">
 			<h3>เริ่มแบบทดสอบ</h3>
-			<h4> </h4>
-			<h4>ข้อสอบทั้งหมดจำนวน 10 ข้อ</h4>
-			<h4>ตอบแต่ละข้อให้ทันภายใน 15 วินาที</h4>
-			<h4> </h4>
 			<h3>"กด เริ่ม เพื่อทำแบบทดสอบ"</h3>
 			
 		</div>
@@ -67,9 +63,9 @@
 	<div class="item5">
 		
 			<div class="next-question">
-				<button type="button" class="start-quiz-btn btn">เริ่มทำแบบทดสอบ</button>
-				<button type="button" class="go-home-btn btn">ออกจากการทดสอบ</button>
-				<button type="button" class="see-result-btn btn">ผลการทดสอบ</button>
+				<button type="button" class="start-quiz-btn btn">เริ่ม</button>
+				<button type="button" class="go-home-btn btn">ต่อไป</button>
+				<button type="button" class="see-result-btn btn">ดูคะแนน</button>
 				<button type="button" class="next-question-btn btn">ถัดไป</button>				
 			</div>
 	</div>
